--- a/news/_config.yml
+++ b/news/_config.yml
@@ -6,22 +6,22 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: Evento
+title: Jazz News
 
 #What is the name of the events or talks you would like to host? (Example Brownbags, Talks, Lighting Talks)
 event_label: Events
 
 description: > # this means to ignore newlines until "baseurl:"
-  Simple Jekyll theme to host internal/external events happening in and around your area. Free free to contribute or fork the repo.
+  Jazz related events for 2018.
 
 baseurl: "/news" # the subpath of your site, e.g. /blog
 url: "http://localhost:8888" # the base hostname & protocol for your site
 
 #These settings might be able to go?
-author: David Boyne
-twitter_username: boyney123
-github_username:  boyney123/evento
-company_name: Comparethemarket
+author: Kaalam.ai
+twitter_username: kaalam_ai
+github_username:  kaalam
+company_name: kaalam.ai
 
 # Build settings
 markdown: kramdown
