--- a/blog/_data/authors.yml
+++ b/blog/_data/authors.yml
@@ -1,20 +1,15 @@
 # Authors
 
-billy_rick:
-  name: Billy Rick
-  web: http://thewhip.com
-  email: billy@rick.com
-  bio: "What do you want, jewels? I am a very extravagant man."
-  avatar: bio-photo-2.jpg
-  twitter: extravagantman
-  google:
-    plus: BillyRick
+jacques_basaldua:
+  name: Jacques Basaldúa
+  web: 
+  email: jacques@dybot.com
+  bio: "Co-founder, kaalam.ai."
+  avatar: jacques.jpg
 
-cornelius_fiddlebone:
-  name: Cornelius Fiddlebone
-  email: cornelius@thewhip.com
-  bio: "I ordered what?"
-  avatar: bio-photo.jpg
-  twitter: rhymeswithsackit
-  google:
-    plus: CorneliusFiddlebone
+kaalam_ai:
+  name: kaalam.ai
+  email: kaalam@dybot.com
+  bio: "Efficency is never wrong."
+  avatar: kaalam.jpg
+  twitter: kaalam_ai
