--- a/jazz_reference/_data/topnav.yml
+++ b/jazz_reference/_data/topnav.yml
@@ -4,29 +4,36 @@ topnav:
 - title: Topnav
   items:
     - title: GitHub
-      external_url: https://github.com/tomjoht/documentation-theme-jekyll
+      external_url: https://github.com/bbvadata/Jazz
     - title: News
-      url: /news
+      external_url: https://kaalam.github.io/news/
+    - title: Blog
+      external_url: https://kaalam.github.io/blog/
 
 #Topnav dropdowns
 topnav_dropdowns:
 - title: Topnav dropdowns
   folders:
-    - title: Jekyll Help
+    - title: Quick Help
       folderitems:
-        - title: Jekyll Talk
-          external_url: https://talk.jekyllrb.com
-        - title: Jekyll documentation
-          external_url: http://jekyllrb.com/docs/home/
-        - title: Jekyll on Stack Overflow
-          external_url: http://stackoverflow.com/questions/tagged/jekyll
-        - title: Jekyll on my blog
-          external_url: http://idratherbewriting.com/category-jekyll/
-    - title: Products
-      folderitems:
-        - title: Jekyll Documentation Theme
-          url: /mydoc_introduction.html
-        - title: Product 1
-          url: /p1_landing_page.html
-        - title: Product 2
-          url: /p2_landing_page.html
+        - title: Getting started in R without a server
+          url: getstarted_r
+        - title: Getting started in Python without a server
+          url: getstarted_py
+        - title: Getting started in R with a Docker server
+          url: getstarted_docker_r
+        - title: Getting started in Python with a Docker server
+          url: getstarted_docker_py
+        - title: Setting up a dockerized Jazz server
+          url: setup_docker
+        - title: More on the R client
+          external_url: https://kaalam.github.io/rjazz/
+        - title: More on the Python client
+          external_url: https://kaalam.github.io/pyjazz/
+        - title: Jazz server API reference
+          url: reference_api
+        - title: Adding C++ functions to the server
+          url: https://talk.jekyllrb.com
+        - title: Jazz server C++ core development
+          external_url: https://kaalam.github.io/develop/
+
