--- a/jazz_reference/_data/sidebars/mydoc_sidebar.yml
+++ b/jazz_reference/_data/sidebars/mydoc_sidebar.yml
@@ -6,29 +6,20 @@ entries:
   version: 0.2.x
   folders:
 
-  - title:
-    output: pdf
-    type: frontmatter
-    folderitems:
-    - title:
-      url: /titlepage.html
-      output: pdf
-      type: frontmatter
-    - title:
-      url: /tocpage.html
-      output: pdf
-      type: frontmatter
-
   - title: Basics
     output: web, pdf
     folderitems:
 
-    - title: Get started
+    - title: Welcome to Jazz!
       url: /index.html
       output: web, pdf
       type: homepage
 
-    - title: Introduction
+    - title: Fundamental Jazz Concepts
+      url: /mydoc_introduction.html
+      output: web, pdf
+
+    - title: A fast walkthrough
       url: /mydoc_introduction.html
       output: web, pdf
 
@@ -36,59 +27,88 @@ entries:
     output: web, pdf
     folderitems:
 
-    - title: 6.0 Release notes
+    - title: Installing a Jazz client
       url: /mydoc_release_notes_60.html
       output: web, pdf
 
-    - title: 5.0 Release notes
+    - title: Installing a Jazz server
       url: /mydoc_release_notes_50.html
       output: web, pdf
 
-  - title: Demo Dockers
+    - title: Compiling Jazz from source
+      url: /mydoc_release_notes_50.html
+      output: web, pdf
+
+  - title: Jazz Dockers
     output: web, pdf
     folderitems:
 
-    - title: About Ruby, Gems, Bundler, etc.
+    - title: The last stable Reference Server
       url: /mydoc_about_ruby_gems_etc.html
       output: web, pdf
 
-    - title: Install Jekyll on Mac
+    - title: Dockerized Jazz Applications
       url: /mydoc_install_jekyll_on_mac.html
       output: web, pdf
+
+      subfolders:
+      - title: Jazz "&agrave; la carte"
+        output: web
+        subfolderitems:
+
+        - title: Jazz with NLP tools
+          url: /tag_formatting.html
+          output: web
+
+        - title: Jazz OCR demo
+          url: /tag_navigation.html
+          output: web    
+
+        - title: Jazz speech processing
+          url: /tag_navigation.html
+          output: web    
 
   - title: Jazz with R
     output: web, pdf
 
     folderitems:
-    - title: Pages
+    - title: A quick R walkthough without a Jazz server
       url: /mydoc_pages.html
       output: web, pdf
 
-    - title: Posts
-      url: /mydoc_posts.html
+    - title: A quick R walkthough connecting to a Jazz server
+      url: /mydoc_pages.html
+      output: web, pdf
+
+    - title: Advanced R usage
+      url: /mydoc_pages.html
       output: web, pdf
 
   - title: Jazz with Python
     output: web, pdf
 
     folderitems:
-    - title: Sidebar navigation
-      url: /mydoc_sidebar_navigation.html
+    - title: A quick Python walkthough without a Jazz server
+      url: /mydoc_pages.html
       output: web, pdf
 
-    - title: YAML tutorial in the context of Jekyll
-      url: /mydoc_yaml_tutorial.html
+    - title: A quick Python walkthough connecting to a Jazz server
+      url: /mydoc_pages.html
+      output: web, pdf
+
+    - title: Advanced Python usage
+      url: /mydoc_pages.html
       output: web, pdf
 
   - title: Jazz via the REST API
     output: web, pdf
 
     folderitems:
-    - title: Tooltips
+    - title: Jazz with just a web browser
       url: /mydoc_adding_tooltips.html
       output: web, pdf
 
-    - title: Alerts
+    - title: The Jazz REST API Reference
       url: /mydoc_alerts.html
       output: web, pdf
 
@@ -96,7 +116,15 @@ entries:
     output: web, pdf
 
     folderitems:
-    - title: Commenting on files
+    - title: Bebop Fundamentals
+      url: /mydoc_commenting_on_files.html
+      output: web, pdf
+
+    - title: Simple Bebop on local blocks
+      url: /mydoc_commenting_on_files.html
+      output: web, pdf
+
+    - title: Bebop Reference
       url: /mydoc_commenting_on_files.html
       output: web, pdf
 
@@ -104,24 +132,24 @@ entries:
     output: web, pdf
 
     folderitems:
-    - title: Build arguments
+    - title: Extending Bebop to File-like Structures
       url: /mydoc_build_arguments.html
       output: web, pdf
 
-    - title: Themes
-      url: /mydoc_themes.html
+    - title: Extending Bebop to Data Sources
+      url: /mydoc_build_arguments.html
+      output: web, pdf
+
+    - title: Extending Bebop to Data Frames
+      url: /mydoc_build_arguments.html
       output: web, pdf
 
   - title: Multinode Abstractions
     output: web, pdf
 
     folderitems:
-    - title: Knowledge-base layout
+    - title: Distribution Principles
       url: /mydoc_kb_layout.html
-      output: web, pdf
-
-    - title: Glossary layout
-      url: /mydoc_glossary.html
       output: web, pdf
 
   - title: Standard Core Functionality
@@ -129,9 +157,66 @@ entries:
 
     folderitems:
 
-    - title: Troubleshooting
+    - title: Standard Core Reference
       url: /mydoc_troubleshooting.html
       output: web, pdf
+
+      subfolders:
+      - title: SC Reference
+        output: web
+        subfolderitems:
+
+        - title: SC Block Types
+          url: /tag_navigation.html
+          output: web    
+
+        - title: Basic Manipulation: Initialize, copy, serialize
+          url: /tag_formatting.html
+          output: web
+
+        - title: Arithmetic Operations
+          url: /tag_navigation.html
+          output: web    
+
+        - title: String Operations
+          url: /tag_navigation.html
+          output: web    
+
+        - title: Logic Operations
+          url: /tag_navigation.html
+          output: web    
+
+        - title: Program Flow
+          url: /tag_navigation.html
+          output: web    
+
+        - title: SC Support for File-like Structures
+          url: /tag_navigation.html
+          output: web    
+
+        - title: SC Support for Data Sources
+          url: /tag_navigation.html
+          output: web    
+
+        - title: SC Support for Data Frames
+          url: /tag_navigation.html
+          output: web    
+
+        - title: SC Support for Multinode
+          url: /tag_navigation.html
+          output: web    
+
+        - title: Functions in Bebop
+          url: /tag_navigation.html
+          output: web    
+
+        - title: Functions in R
+          url: /tag_navigation.html
+          output: web    
+
+        - title: Functions in Python
+          url: /tag_navigation.html
+          output: web    
 
   - title: Extending the Core
     output: web
@@ -141,15 +226,3 @@ entries:
       url: /mydoc_tag_archives_overview.html
       output: web
 
-      subfolders:
-      - title: Tag archive pages
-        output: web
-        subfolderitems:
-
-        - title: Formatting pages
-          url: /tag_formatting.html
-          output: web
-
-        - title: Navigation pages
-          url: /tag_navigation.html
-          output: web
