Assigns new files and URLs to the sidebar items

--- a/jazz_reference/_data/sidebars/mydoc_sidebar.yml
+++ b/jazz_reference/_data/sidebars/mydoc_sidebar.yml
@@ -16,11 +16,11 @@ entries:
       type: homepage
 
     - title: Fundamental Jazz Concepts
-      url: /mydoc_introduction.html
+      url: /basics_fundamental.html
       output: web, pdf
 
     - title: A fast walkthrough
-      url: /mydoc_introduction.html
+      url: /basics_walkthrough.html
       output: web, pdf
 
   - title: Setup
@@ -28,15 +28,15 @@ entries:
     folderitems:
 
     - title: Installing a Jazz client
-      url: /mydoc_release_notes_60.html
+      url: /setup_installing_client.html
       output: web, pdf
 
     - title: Installing a Jazz server
-      url: /mydoc_release_notes_50.html
+      url: /setup_installing_server.html
       output: web, pdf
 
     - title: Compiling Jazz from source
-      url: /mydoc_release_notes_50.html
+      url: /setup_compiling_from_source.html
       output: web, pdf
 
   - title: Jazz Dockers
@@ -44,11 +44,11 @@ entries:
     folderitems:
 
     - title: The last stable Reference Server
-      url: /mydoc_about_ruby_gems_etc.html
+      url: /docker_last_stable_reference.html
       output: web, pdf
 
     - title: Dockerized Jazz Applications
-      url: /mydoc_install_jekyll_on_mac.html
+      url: /docker_jazz_a_la_carte.html
       output: web, pdf
 
       subfolders:
@@ -57,15 +57,15 @@ entries:
         subfolderitems:
 
         - title: Jazz with NLP tools
-          url: /tag_formatting.html
+          url: /docker_jazz_nlp.html
           output: web
 
         - title: Jazz OCR demo
-          url: /tag_navigation.html
+          url: /docker_jazz_ocr.html
           output: web    
 
         - title: Jazz speech processing
-          url: /tag_navigation.html
+          url: /docker_jazz_speech.html
           output: web    
 
   - title: Jazz with R
@@ -73,15 +73,15 @@ entries:
 
     folderitems:
     - title: A quick R walkthough without a Jazz server
-      url: /mydoc_pages.html
+      url: /rjazz_walkthough_client_only.html
       output: web, pdf
 
     - title: A quick R walkthough connecting to a Jazz server
-      url: /mydoc_pages.html
+      url: /rjazz_walkthough_with_server.html
       output: web, pdf
 
     - title: Advanced R usage
-      url: /mydoc_pages.html
+      url: /rjazz_advanced.html
       output: web, pdf
 
   - title: Jazz with Python
@@ -89,15 +89,15 @@ entries:
 
     folderitems:
     - title: A quick Python walkthough without a Jazz server
-      url: /mydoc_pages.html
+      url: /pyjazz_walkthough_client_only.html
       output: web, pdf
 
     - title: A quick Python walkthough connecting to a Jazz server
-      url: /mydoc_pages.html
+      url: /pyjazz_walkthough_with_server.html
       output: web, pdf
 
     - title: Advanced Python usage
-      url: /mydoc_pages.html
+      url: /pyjazz_advanced.html
       output: web, pdf
 
   - title: Jazz via the REST API
@@ -105,11 +105,11 @@ entries:
 
     folderitems:
     - title: Jazz with just a web browser
-      url: /mydoc_adding_tooltips.html
+      url: /rest_just_a_browser.html
       output: web, pdf
 
     - title: The Jazz REST API Reference
-      url: /mydoc_alerts.html
+      url: /rest_reference.html
       output: web, pdf
 
   - title: Bebop
@@ -117,15 +117,15 @@ entries:
 
     folderitems:
     - title: Bebop Fundamentals
-      url: /mydoc_commenting_on_files.html
+      url: /bebop_fundamentals.html
       output: web, pdf
 
     - title: Simple Bebop on local blocks
-      url: /mydoc_commenting_on_files.html
+      url: /bebop_simple_on_local_blocks.html
       output: web, pdf
 
     - title: Bebop Reference
-      url: /mydoc_commenting_on_files.html
+      url: /bebop_reference.html
       output: web, pdf
 
   - title: Multiblock Abstractions
@@ -133,15 +133,15 @@ entries:
 
     folderitems:
     - title: Extending Bebop to File-like Structures
-      url: /mydoc_build_arguments.html
+      url: /bebop_multiblock_file_like_structures.html
       output: web, pdf
 
     - title: Extending Bebop to Data Sources
-      url: /mydoc_build_arguments.html
+      url: /bebop_multiblock_data_sources.html
       output: web, pdf
 
     - title: Extending Bebop to Data Frames
-      url: /mydoc_build_arguments.html
+      url: /bebop_multiblock_data_frames.html
       output: web, pdf
 
   - title: Multinode Abstractions
@@ -149,7 +149,7 @@ entries:
 
     folderitems:
     - title: Distribution Principles
-      url: /mydoc_kb_layout.html
+      url: /bebop_multinode_principles.html
       output: web, pdf
 
   - title: Standard Core Functionality
@@ -158,7 +158,7 @@ entries:
     folderitems:
 
     - title: Standard Core Reference
-      url: /mydoc_troubleshooting.html
+      url: /sc_00_reference.html
       output: web, pdf
 
       subfolders:
@@ -167,62 +167,75 @@ entries:
         subfolderitems:
 
         - title: SC Block Types
-          url: /tag_navigation.html
+          url: /sc_01_block_types.html
           output: web    
 
         - title: Basic Manipulation: Initialize, copy, serialize
-          url: /tag_formatting.html
+          url: /sc_02_basic_functions.html
           output: web
 
         - title: Arithmetic Operations
-          url: /tag_navigation.html
+          url: /sc_03_arithmetic.html
           output: web    
 
         - title: String Operations
-          url: /tag_navigation.html
+          url: /sc_04_strings.html
           output: web    
 
         - title: Logic Operations
-          url: /tag_navigation.html
+          url: /sc_05_logic.html
           output: web    
 
         - title: Program Flow
-          url: /tag_navigation.html
+          url: /sc_06_program_flow.html
           output: web    
 
         - title: SC Support for File-like Structures
-          url: /tag_navigation.html
+          url: /sc_07_file_like.html
           output: web    
 
         - title: SC Support for Data Sources
-          url: /tag_navigation.html
+          url: /sc_08_data_sources.html
           output: web    
 
         - title: SC Support for Data Frames
-          url: /tag_navigation.html
+          url: /sc_09_data_frames.html
           output: web    
 
         - title: SC Support for Multinode
-          url: /tag_navigation.html
+          url: /sc_10_multi_node.html
           output: web    
 
         - title: Functions in Bebop
-          url: /tag_navigation.html
+          url: /sc_11_functions.html
           output: web    
 
         - title: Functions in R
-          url: /tag_navigation.html
+          url: /sc_12_functions_in_r.html
           output: web    
 
         - title: Functions in Python
-          url: /tag_navigation.html
+          url: /sc_13_functions_in_python.html
           output: web    
 
   - title: Extending the Core
     output: web
     folderitems:
 
-    - title: Tag archives overview
-      url: /mydoc_tag_archives_overview.html
+    - title: Extending in Bebop, R and Python
+      url: /customization_scripting.html
       output: web
+
+    - title: Extending Jazz in C++
+      url: /customization_cpp.html
+      output: web
+
+    - title: Deploying Jazz Dockers with flavors
+      url: /customization_docker.html
+      output: web
+
+    - title: Contributing to Jazz
+      url: /contributing_to_jazz.html
+      output: web
+
 
