--- a/jazz_reference/_data/sidebars/mydoc_sidebar.yml
+++ b/jazz_reference/_data/sidebars/mydoc_sidebar.yml
@@ -62,11 +62,11 @@ entries:
 
         - title: Jazz OCR demo
           url: /docker_jazz_ocr.html
-          output: web    
+          output: web
 
         - title: Jazz speech processing
           url: /docker_jazz_speech.html
-          output: web    
+          output: web
 
   - title: Jazz with R
     output: web, pdf
@@ -168,55 +168,55 @@ entries:
 
         - title: SC Block Types
           url: /sc_01_block_types.html
-          output: web    
+          output: web
 
-        - title: Basic Manipulation: Initialize, copy, serialize
+        - title: Basic Manipulation. initialize, copy and serialize
           url: /sc_02_basic_functions.html
           output: web
 
         - title: Arithmetic Operations
           url: /sc_03_arithmetic.html
-          output: web    
+          output: web
 
         - title: String Operations
           url: /sc_04_strings.html
-          output: web    
+          output: web
 
         - title: Logic Operations
           url: /sc_05_logic.html
-          output: web    
+          output: web
 
         - title: Program Flow
           url: /sc_06_program_flow.html
-          output: web    
+          output: web
 
         - title: SC Support for File-like Structures
           url: /sc_07_file_like.html
-          output: web    
+          output: web
 
         - title: SC Support for Data Sources
           url: /sc_08_data_sources.html
-          output: web    
+          output: web
 
         - title: SC Support for Data Frames
           url: /sc_09_data_frames.html
-          output: web    
+          output: web
 
         - title: SC Support for Multinode
           url: /sc_10_multi_node.html
-          output: web    
+          output: web
 
         - title: Functions in Bebop
           url: /sc_11_functions.html
-          output: web    
+          output: web
 
         - title: Functions in R
           url: /sc_12_functions_in_r.html
-          output: web    
+          output: web
 
         - title: Functions in Python
           url: /sc_13_functions_in_python.html
-          output: web    
+          output: web
 
   - title: Extending the Core
     output: web
@@ -237,5 +237,3 @@ entries:
     - title: Contributing to Jazz
       url: /contributing_to_jazz.html
       output: web
-
-
