Creates mock but functional pages for basics

--- a/jazz_reference/_data/sidebars/mydoc_sidebar.yml
+++ b/jazz_reference/_data/sidebars/mydoc_sidebar.yml
@@ -19,7 +19,7 @@ entries:
       url: /basics_fundamental.html
       output: web, pdf
 
-    - title: A fast walkthrough
+    - title: A fast Jazz walkthrough
       url: /basics_walkthrough.html
       output: web, pdf
 
