Logic to organizers without spaces

--- a/news/_data/organisers.yml
+++ b/news/_data/organisers.yml
@@ -1,9 +1,10 @@
-Santiago Basaldúa:
-    name: Santiago Basaldúa
+kaalamai:
+    name: "kaalam.ai"
+    email: "kaalam@dybot.com"
+    photo: "https://gravatar.com/avatar/ba6da6ce6458215faa8e0502b9c18ea0"
+
+santiago:
+    name: "Santiago Basaldúa"
     email: "jacques@dybot.com"
     photo: "http://gravatar.com/avatar/90613e1e8d9284ef39462746165f668b"
 
-Kaalam AI:
-    name: kaalam.ai
-    email: "kaalam@dybot.com"
-    photo: ""
