Some edition to a still incomplete review.

--- a/jazz_reference/_data/sidebars/mydoc_sidebar.yml
+++ b/jazz_reference/_data/sidebars/mydoc_sidebar.yml
@@ -15,7 +15,7 @@ entries:
       output: web, pdf
       type: homepage
 
-    - title: Fundamental Jazz Concepts
+    - title: Introduction to Jazz
       url: /basics_fundamental.html
       output: web, pdf
 
