Removes references to news and blog

--- a/blog/_data/authors.yml
+++ b/blog/_data/authors.yml
@@ -2,6 +2,7 @@
 
 jacques_basaldua:
   name: Jacques Basaldúa
+  web: 
   email: jacques@dybot.com
   bio: "Co-founder, kaalam.ai."
   avatar: jacques.jpg
