Renames the core functions page

--- a/jazz_reference/_data/sidebars/mydoc_sidebar.yml
+++ b/jazz_reference/_data/sidebars/mydoc_sidebar.yml
@@ -29,7 +29,7 @@ entries:
           output: web
 
         - title: Core functions
-          url: /vision_applying_core_to_blocks.html
+          url: /vision_core_functions.html
           output: web
 
         - title: Distributed containers
