Fixes the title

--- a/jazz_reference/_data/sidebars/mydoc_sidebar.yml
+++ b/jazz_reference/_data/sidebars/mydoc_sidebar.yml
@@ -15,7 +15,7 @@ entries:
       output: web, pdf
       type: homepage
 
-    - title: What is the vision? What does Jazz want to become?
+    - title: What is the vision? What does Jazz want to be?
       url: /basics_jazz_vision.html
       output: web, pdf
 
